PR/55137: Kouichi Hashikawa: ipfstat -f incorrect output Fix incorrect byte order.